# agent-memory

./: README.md  docker-compose.yml  multi-agent-architecture.md  multi_chat_dev_plan.md
backend/: .env.examble  .env.example  .gitignore  README.md  pyproject.toml
backend/app/: agents.py  auth_models.py  auth_routes.py  auth_service.py  chat_routes.py  config.py  db.py  db_models.py  facebook_models.py  facebook_oauth_routes.py  facebook_service.py  image_service.py  main.py  models.py  session_service.py  upload_routes.py  user_service.py
backend/app/models/: __init__.py  auth.py  models.py
backend/app/routes/: auth.py  auth_routes.py  chat_routes.py  facebook_oauth_routes.py  upload_routes.py
backend/app/services/: auth.py  auth_service.py  facebook_service.py  image_service.py  session_service.py  user_service.py
cli/: .env.sample  .gitignore  pyproject.toml
cli/agents/: delegation.py  handoff.py  hello.py  image.py  topic.py  weather.py
cli/scripts/: post_facebook.py  post_instagram.py  post_text.py
fastapi-s3/: .env.sample  README.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: BusinessInformation.tsx  FacebookLogin.tsx  Header.tsx  InputForm.tsx  LoadingSpinner.tsx  LoginButton.tsx  Messages.tsx  ProfileMenu.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCachedImage.ts
frontend/src/icons/: AppIcon.tsx  BriefcaseIcon.tsx  ChatIcon.tsx  CheckMarkIcon.tsx  ChevronIcon.tsx  ClockIcon.tsx  CodeIcon.tsx  CollectionsIcon.tsx  (+20 more)
(+4 files in other folders)
